KISS margins, correcting aligns

--- a/src/components/WorkExperience/index.css
+++ b/src/components/WorkExperience/index.css
@@ -1,6 +1,5 @@
 .work-experience-box {
-  margin-top: 6rem;
-  margin-bottom: 6rem;
+  margin-top: 10rem;
   width: 85%;
 }
 
